# videoeditor

./: .cursorrules  .dockerignore  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  LICENSE-AGPL3.md  LICENSE.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  nginx.conf  nginx.dev.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.cursor/: rules  rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
app/: NotFound.tsx  NotFoundPage.tsx  app.css  editor.tsx  home.tsx  root.tsx  routes.ts  server.ts  test.html
app/hooks/: useAuth.ts  useExportHistory.ts  useFullscreen.ts  useKeyframeLanes.ts  useMediaBin.ts  useRenderer.ts  useRuler.ts  useSnapPoints.ts  useTimeline.ts  useTimelineViewport.ts  useWaveform.ts
app/lib/: aspect-ratios.ts  assets.repo.ts  auth.client.ts  auth.server.ts  migrate.ts  (+4 more)
backend/: .env.example  Dockerfile  README.md  db.py  main.py  pyproject.toml  requirements.txt  schema.py  tools_registry.py  utils.py
backend/ai/: routes.py  schema.py
backend/api/: routes.py  schema.py
backend/auth/: routes.py  schema.py  service.py
migrations/: 000_better_auth.sql  000_betterauth.sql  000_init.sql  001_assets.sql  001_projects.sql  001_projects_assets.sql  002_assets.sql  002_projects.sql  003_project_renders.sql
project_data/: 189d1e2c-b747-4a18-8bff-73e4f39bab90.json
(+121 files in other folders)
